--- a/root/api/package.json
+++ b/root/api/package.json
@@ -1,12 +1,13 @@
 {
   "name": "api",
   "version": "1.0.0",
-  "description": "frontend for uq-connect",
+  "description": "backend for uq-connect",
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
+    "start:test": "cross-env NODE_ENV=test node index.js"
   },
   "keywords": [],
   "author": "",
@@ -16,11 +17,13 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
+    "jest": "^29.6.1",
     "nodemon": "^3.0.1"
   }
 }
