--- a/root/api/package.json
+++ b/root/api/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "build:ui": "rm -rf dist && cd ../ui/ && npm run build && cp -r dist ../api/",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
     "start:test": "cross-env NODE_ENV=test node index.js"
   },
+"proxy": "http://localhost:3001",
   "keywords": [],
   "author": "",
   "license": "ISC",
