--- a/root/api/package.json
+++ b/root/api/package.json
@@ -8,7 +8,8 @@
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "build:ui": "rm -rf dist && cd ../ui/ && npm run build && cp -r dist ../api/",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
-    "start:test": "cross-env NODE_ENV=test node index.js"
+    "start:test": "cross-env NODE_ENV=test node index.js",
+    "lint:fix": "eslint --fix ./*.js"
   },
   "proxy": "http://localhost:3001",
   "keywords": [],
@@ -27,6 +28,11 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
+    "eslint": "^8.46.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-n": "^16.0.1",
+    "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.6.1",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
