Finish off coursesRouter with added handling  review param

--- a/root/api/package.json
+++ b/root/api/package.json
@@ -23,7 +23,8 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
     "mongoose-unique-validator": "^4.0.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
