--- a/root/api/package.json
+++ b/root/api/package.json
@@ -9,6 +9,7 @@
     "build:ui": "rm -rf dist && cd ../ui/ && npm run build && cp -r dist ../api/",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
     "start:test": "cross-env NODE_ENV=test node index.js",
+    "lint:check": "eslint .",
     "lint:fix": "eslint --fix ./*.js"
   },
   "proxy": "http://localhost:3001",
@@ -31,7 +32,9 @@
     "dotenv": "^16.3.1",
     "eslint": "^8.46.0",
     "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-cypress": "^2.14.0",
     "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-n": "^16.0.1",
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.6.1",
